fixed html not showing bottom

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -710,7 +710,7 @@ nav {
     }
     .hero-title h1 {
         color: $blue;
-        font-size: 1rem;
+        font-size: 1.8rem;
         font-family: Gill Sans;
         font-style: italic;
         padding: 25px 15px 15px 50px;
@@ -782,7 +782,7 @@ nav {
     
     .hero-title h1 {
         color: $blue;
-        font-size: 0.90em;
+        font-size: 1.2rem;
         font-family: Gill Sans;
         font-style: italic;
         padding: 15px 15px  15px 50px;
@@ -899,7 +899,7 @@ nav {
 @media (min-width: 150px) and (max-width: 377px){
 
     .entry-title h1 {
-        font-size: 0.90em;
+        font-size: 1rem;
     }
 
     #menu div {
@@ -1012,7 +1012,7 @@ nav {
 
     .hero-title h1 {
         color: $blue;
-        font-size: 0.85em;
+        font-size: 1rem;
         font-family: Gill Sans;
         font-style: italic;
         padding: 15px 15px 15px 50px;
